--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "Satoshi";
+  src: url('/public/fonts/Satoshi-Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: "Satoshi-Bold";
+  src: url('/public/fonts/Satoshi-Bold.otf') format('opentype');
+}
+
 *,
 *::before,
 *::after {
