--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,11 +1,17 @@
 @font-face {
   font-family: "Satoshi";
+  font-style: normal;
+  font-weight: 400;
   src: url('/public/fonts/Satoshi-Regular.otf') format('opentype');
+  font-display: swap;
 }
 
 @font-face {
   font-family: "Satoshi-Bold";
+  font-style: normal;
+  font-weight: 700;
   src: url('/public/fonts/Satoshi-Bold.otf') format('opentype');
+  font-display: swap;
 }
 
 *,
